@startuml

BancoUseCase <|-- BancoUseCaseImpl
Serializable <|-- BancoUseCaseImpl

class BancoUseCaseImpl {

-BancoDao : bancoDao

+BancoUseCaseImpl()
-Banco copiaDtoPojo(BancoDTO pBanco)

}


interface BancoUseCase{

Serializable insertBanco(BancoDTO pBanco) 
BancoDTO getByIdBanco(BancoDTO pBanco )
void deleteBanco(BancoDTO pBanco)
BancoDTO getByIdBanco(BancoDTO pBanco ) 
int updateBanco(BancoDTO pBanco)
List<BancoDTO> selectByExampleBanco(Optional<String> pCriterio)

}

interface Serializable{


}


@enduml
